css/styles.css
* {
  box-sizing: border-box;
  /* border: solid #D64078 2px; */
}

body {
  padding-top: 60px;
  position: relative;
}

/*************************/
/****** Navigation *******/
/*************************/

.navbar .container-fluid {
  margin: 0 auto;
  padding: 0 10px;
}

.navbar a {
  text-transform: uppercase;
  letter-spacing: 0.05em;
  text-decoration: none;
  transition: color 500ms;
  -webkit-transition: color 500ms;
}

/*************************/
/********* Main **********/
/*************************/

/*** General stylings ****/

.header,
.container-fluid {
  margin: 10px auto;
  padding: 10px;
  width: 80%;
}

.header {
  padding-top: 60px;
  margin-top: -40px;
  padding-bottom: 20px;
}

.row {
  margin: -10px;
}

.col {
  padding: 10px;
}

.h2 {
  padding-bottom: 10px
}

/*** Specific stylings ***/

/********* Index *********/

.index .container {
  padding: 0;
  width: 100%;
}

.index {
  margin-top: -10px;
}

/********* Work **********/

/*** Responsive squared images hack ***/
#work .col {
  position: relative;
  overflow: hidden;
  padding-bottom: 50%;
}

@media (min-width: 768px) { /* Alternative: 992px*/
  #work .col {
    padding-bottom: 25%;
  }
}

/*** Responsive squared images hack ***/
#work .img-responsive {
  position: absolute;
  min-width: 100%;
  min-height: 100%;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  padding: 10px;
}

.backgr-transp,
.info {
  position: absolute;
  display: none;
}

.backgr-transp {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba( 4, 32, 55, 0.7);
}

.info {
  top: 40%;
  left: 55%;
  transform: translateX(-55%) translateY(-40%);
  color: #FFFFFF;
  font-family: Futura;
  text-transform: uppercase;
  font-weight: 700;
  letter-spacing: 0.5em;
  line-height: 1.6;
}

.proj-title {
  font-weight: 100;
}

/********* About *********/

.image img,
.carousel img,
.container-fluid img {
  width: 100%;
  object-fit: cover;
}

.skills>ul {
  padding-left: 22%;
  padding-right: 20px;
}

.main-text {
  padding-top: 20px;
}

/********* FAQ ***********/

.flex {
  display: flex;
}

.modal-button {
  margin: 20px 0 10px auto;
  align-self: center;
}

.modal-embed {
  height: 500px;
  width: 100%;
  padding: 10px;
}

.panel-heading a,
.contact a {
  text-decoration: none;
}

/********* Contact *******/

.contact {
  padding-top: 60px;
}

.contact .header,
.contact .jumbotron {
  max-width: 45%;
  min-width: 320px;
  margin: 0 10%;
  padding: 10px;
}

.contact .container {
  padding: 10px 0;
}

.email,
.address {
  transition: all 400ms;
  -webkit-transition: all 400ms;
}

.slogan {
  padding-top: 15px;
}

/********* Footer ********/

.footer .container-fluid {
  display: flex;
  justify-content: flex-end;
  padding: 15px 0;
  margin: 0 auto;
}

.footer__element {
  padding: 0 5px;
}

/*************************/
/****** Typography *******/
/*************************/

body,
p {
  font-family: Georgia, Times, 'Times New Roman', serif;
}

.header,
.main h2,
.main h3,
.navbar a,
.panel-title,
.carousel-caption,
.skills,
.form label {
  font-family: 'Roboto', Helvetica, Arial, sans-serif !important;
  /* margin-top: 0; */
  }

.intro p,
.contact p {
  font-family: 'Roboto', Helvetica, Arial, sans-serif;
  font-size: 1.2em;
  font-weight: 100;
  -webkit-margin-before: 0;
}

.skills h2 {
  text-align: center;
  text-transform: uppercase;
}

.carousel-caption {
  text-shadow: 3px 3px 0px #000;
  font-size: 1em;
}

.email:hover,
.address:hover {
  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
  -webkit-transform: scale(1.02);
  transform: scale(1.02);
}

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .main .header h1 {
    font-size: 63px;
  }
  .carousel-caption {
    font-size: 2.2vw;
  }
}

/*************************/
/******** Colors *********/
/*************************/

body,
.faq,
.contact .header,
.contact .jumbotron,
.main-text,
.form-control,
.contact a {
  background-color: #FFFFFF;
  color: #3D6485;
}

.panel-default .panel-heading {
  background-color: #496C89;
  color: #FFFFFF;
}

/*** Dark blue navigation background color ***/
.navbar,
.footer {
  background-color: #042037;
  color: #FFFFFF;
}

/*** White links ***/
.navbar .navbar-header a,
.navbar-collapse .nav li a {
  color: #FFFFFF;
}

/*** Remove border below link list ***/
.nav-tabs {
  border-bottom: 0px solid #042037;
}

/*** Inverse link color and background when hovered/selected ***/
.navbar .navbar-right .active a:hover,
.navbar .navbar-right li a:hover {
  color: #042037;
  background-color: #718DA5;
}

/*** Normal colors plus small border when selected ***/
.navbar .navbar-right .active a,
.navbar .navbar-right .active a:focus,
.navbar .navbar-right li a:focus {
  /* color: #FFFFFF; */
  background-color: #042037;
}

/*** Light when hovered/selected ***/
.navbar .navbar-toggle:hover,
.navbar .navbar-toggle:focus {
  background-color: #718DA5;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

/*** White border around burger menu and hovered/selected links ***/
.navbar .navbar-toggle,
.nav-tabs li a:hover {
  border-color: #FFFFFF;
}

/*** Border around hovered/selected links, round edges ***/
.nav-tabs li.active a,
.nav-tabs li.active a:focus,
.nav-tabs li.active a:hover,
.nav-tabs li a:focus,
.nav-tabs li a:hover {
  border: 1px solid #FFFFFF;
  border-top-color: transparent;
  border-bottom-color: transparent;
  /* border-radius: 4px 4px 0 0; */
  border-radius: 0;
}

.tooltip-inner {
  color: #FFFFFF;
  background: #042037;
}

.tooltip.right .tooltip-arrow {
  border-right-color: #042037;
}

.tooltip.top .tooltip-arrow {
  border-top-color: #042037;
}

/*** Parallax effect with fixed background image ***/
.contact {
  background-image: url("../img/telephone.jpg");
  background-attachment: fixed;
  background-size: cover;
  /* color: white; */
  /* padding: 100px; */
  /* padding-top: 50px; */
  /* height: 400px; */
}

.contact .header,
.contact .jumbotron {
  /* background-color: #C180AD; */
  border: 1px solid #C180AD;
  border-top-color: transparent;
  border-bottom-color: transparent;
  border-radius: 25px 25px 0 0;
  color: #3D6485;
}

.contact .header {
  border-radius: 25px 25px 0 0;
}

.contact .jumbotron {
  border-radius: 0 0 25px 25px;
}

.panel-heading {
  background-color: #A6A4B1;
}

.skills {
  background-color: #40002D;
  color: white;
  border: 10px solid #FFFFFF;
}

.carousel-caption {
  /* width: 100%; */
  background-color:rgba( 4, 32, 55, 0.7);
}

.btn-primary {
  background-color: #FFFFFF;
  border-color: #ccc;
  color: #3D6485;
}

.btn-primary:hover,
.btn-primary:focus {
  background-color: #718DA5;
  border-color: #496C89;
}

.btn-primary:active {
  background-color: #496C89;
  border-color: #123552;
}

